# notion-vocabulary

./: .gitignore  Dockerfile  Readme.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
input/: example.txt
sql/: schema.sql
src/notion_vocabulary/: __init__.py  __main__.py  api.py  config.py  models.py  pipeline.py  repository.py  text_processing.py
tests/: test_api.py  test_pipeline.py
